--- a/external-files/src/main/resources/application-dev.yml
+++ b/external-files/src/main/resources/application-dev.yml
@@ -7,8 +7,8 @@ s3:
   url: http://localhost
   host: 9000
   bucket-name: surf
-  access-key: surf
-  secret-key: surfpassword
+  access-key: ${S3_ACCESS_KEY}
+  secret-key: ${S3_SECRET_KEY}
 
 spring:
   datasource:
