TASK-74 ci/cd preparations
- rename env file template from .env to .template.env
- remove files like environment.*.ts from vcs (we need only base configuration file in vcs)

--- a/.template.env
+++ b/.template.env
@@ -1,5 +1,5 @@
 # This is template for .env file
-# Replace placeholders with your property values and use this .env file locally
+# Replace placeholders with your property values, rename this file to ".env" and use it locally
 # You shouldn't modify this file in vcs
 
 
