--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,7 +134,7 @@ services:
       kafka-topics --bootstrap-server kafka-service:29092 --list
       
       echo -e 'Creating kafka topics on broker...'
-      kafka-topics --bootstrap-server kafka-service:29092 --create --if-not-exists --topic receiving-request-topic --replication-factor 1 --partitions 3
+      kafka-topics --bootstrap-server kafka-service:29092 --create --if-not-exists --topic core-topics --replication-factor 1 --partitions 3
       
       echo -e 'Successfully created the following topics:'
       kafka-topics --bootstrap-server kafka-service:29092 --list
