TASK-75 Refactor excel parsing (#45)
TASK-75 Refactor excel parsing

Рефакторинг логики в сервисе внешних файлов, добавление логики в сервисе core.

--- a/core/src/main/resources/application-dev.yml
+++ b/core/src/main/resources/application-dev.yml
@@ -37,3 +37,4 @@ authService:
 
 externalFiles:
   s3FileServiceApi: http://localhost:8081/api/s3FileServiceApi
+  s3ResourceServiceApi: http://localhost:8081/api/s3ResourceServiceApi
