TASK-15 Candidate testing phase
- Add testing phase states(switching from core service):
    - PENDING: accepting candidate applications, testing phase not started yet
    - ACTIVE: candidate application phase closed, testing phase started.
       When this phase starts, TestCreatedEvent messages are sent via kafka in order to notify candidates using mailService
       When candidate passes the test, TestPassedEvent messages are sent via kafka
    - COMPLETE: testing phase completed, test passing is no longer allowed

- Some dto refactoring and other minor improvements

--- a/core/src/main/resources/application-prod.yml
+++ b/core/src/main/resources/application-prod.yml
@@ -37,4 +37,5 @@ authService:
   credentialsServiceApi: ${AUTH_API}
 
 externalFiles:
-  s3FileServiceApi: ${EXI_FILES_API}
+  s3FileServiceApi: ${EXT_FILES_API}
+  s3ResourceServiceApi: ${EXT_FILES_RES_API}
