TASK-15 Candidate testing phase
- Retry reading from kafka topic on exceptions (e.g. database errors)
- Improve testVariant finishing state: add TestVariantFinalizerService that emits TestVariantStateFinished event on answering last question of test or on timeout (when test time is up)
- Send TestCreatedEvent to kafka topic when TestVariant is created in ACTIVE testing phase state

- Refactoring kafka configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -237,6 +237,7 @@ services:
       PORT: 80
       <<: *db-cred
       DB_NAME: surfwebstudyjam_testing
+      KAFKA_HOST: kafka-service:9092
     ports:
       - "8084:80"
     healthcheck:
