--- a/testing/src/main/resources/application-dev.yml
+++ b/testing/src/main/resources/application-dev.yml
@@ -4,6 +4,8 @@ server:
     context-path: /testing
 
 spring:
+  kafka:
+    bootstrap-servers: kafka-service:9092
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:file:./testing_db;DB_CLOSE_DELAY=-1
