--- a/testing/src/main/resources/application-prod.yml
+++ b/testing/src/main/resources/application-prod.yml
@@ -4,6 +4,8 @@ server:
     context-path: /testing
 
 spring:
+  kafka:
+    bootstrap-servers: ${KAFKA_HOST}
   datasource:
     url: jdbc:postgresql://${DB_HOST}/${DB_NAME}
     username: ${DB_USER}
