Feature/task 18 mail logic (#50)
TASK-18 Add mail logic
Co-authored-by: uncmmath <uncmmath@gmail.com>

--- a/.template.env
+++ b/.template.env
@@ -27,3 +27,6 @@ KEYCLOAK_CLIENT_SECRET: <your keycloak client secret>
 S3_BUCKET_NAME: <your s3 bucket name>
 S3_ACCESS_KEY: <your s3 access key>
 S3_SECRET_KEY: <your s3 secret key>
+
+SENDER_EMAIL_ADDRESS: <your sender email address>
+SENDER_EMAIL_PASSWORD: <your sender email password>
