fixup! TASK-83 - application.yml edit (#55)

--- a/core/src/main/resources/application-dev.yml
+++ b/core/src/main/resources/application-dev.yml
@@ -38,5 +38,6 @@ authService:
   credentialsServiceApi: http://localhost:8085/credentialsServiceApi
 
 externalFiles:
+  s3FacadeServiceApi: http://localhost:8081/external-files/s3FacadeServiceApi
   s3FileServiceApi: http://localhost:8081/external-files/s3FileServiceApi
   s3ResourceServiceApi: http://localhost:8081/external-files/s3ResourceServiceApi
