--- a/core/src/main/resources/application-prod.yml
+++ b/core/src/main/resources/application-prod.yml
@@ -39,3 +39,4 @@ authService:
 externalFiles:
   s3FileServiceApi: ${EXT_FILES_API}
   s3ResourceServiceApi: ${EXT_FILES_RES_API}
+  s3FacadeServiceApi: ${EXT_FACADE_API}
