Feature/task 87 hr report (#58)
* TASK-87 - adding excel candidate report

* TASK-87 - adding excel candidate report

* TASK-87 - some refactoring

* TASK-87 - some refactoring

* TASK-87 - adding report generation by kafka event

* fixup! TASK-87 - deleted debug code

--- a/report/src/main/resources/application.yml
+++ b/report/src/main/resources/application.yml
@@ -26,4 +26,4 @@ services:
   testing:
     url: http://0.0.0.0:8084/testing
   external-files:
-    url: http://0.0.0.0:8181/external-files
+    url: http://0.0.0.0:8181/external-files/files/file
