TASK-88 Add project card integration (#59)
TASK-88 Add project card functionality

--- a/web/angular.json
+++ b/web/angular.json
@@ -109,6 +109,8 @@
               }
             ],
             "styles": [
+              "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
+              "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
               "src/styles.less"
             ],
             "scripts": []
