TASK Add Telegram Bot Integration (#60)
TASK-88 Add Telegram Bot Integration

Добавление бота для интеграции с остальными сервисами.
Реализация вебхуков

--- a/meeting/src/main/resources/application-dev.yml
+++ b/meeting/src/main/resources/application-dev.yml
@@ -28,9 +28,14 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
-      client-id: service-defence
+      client-id: service-meeting
       properties:
         spring.json.add.type.headers: false
+    consumer:
+      client-id: service-meeting
+      group-id: 3
+      auto-offset-reset: earliest
+      bootstrap-servers: localhost:9092
 
 springdoc:
   swagger-ui:
