--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -63,6 +63,12 @@ scrape_configs:
     static_configs:
       - targets: [ 'host.docker.internal:8084' ]
 
+  - job_name: 'telegram-bot-service'
+    scrape_interval: 5s
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'host.docker.internal:8089' ]
+
   - job_name: 'cadvisor'
     scrape_interval: 5s
     static_configs:
