--- a/.template.env
+++ b/.template.env
@@ -33,3 +33,6 @@ SENDER_EMAIL_PASSWORD: <your sender email password>
 
 GRAFANA_ADMIN_USER: <your admin user name>
 GRAFANA_ADMIN_PASSWORD: <your admin user password>
+
+SURF_HELPER_BOT_NAME: <your bot name>
+SURF_HELPER_BOT_TOKEN: <your bot token>
