--- a/testing/src/main/resources/application-dev.yml
+++ b/testing/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   kafka:
-    bootstrap-servers: kafka-service:9092
+    bootstrap-servers: localhost:9092
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:file:./testing_db;DB_CLOSE_DELAY=-1
@@ -27,3 +27,5 @@ spring:
         batch_versioned_data: true
   h2:
     console.enabled: true
+  flyway:
+    enabled: false
